[tool.poetry]
name = "uitbx"
version = "0.1.0"
description = "Useful tools for apps with UI."
authors = ["unmono <unmono.dev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
